# wbgt-world-cup-analysis

./: .gitignore  .readthedocs.yaml  Dockerfile  LICENSE  README.md  REPRODUCE.md  pyproject.toml  run.py  wbgt_vs_li2020_1979.ipynb
.github/workflows/: ci.yml
config/: project.yaml
data/cleaned/: world_cup_matches_1950-2023.csv
data/raw/fifa/: matches_1950.csv  matches_1954.csv  matches_1958.csv  matches_1962.csv  matches_1966.csv  matches_1970.csv  matches_1974.csv  matches_1978.csv  matches_1982.csv  matches_1986.csv  matches_1990.csv  matches_1994.csv  matches_1998.csv  matches_2002.csv  matches_2006.csv  matches_2010.csv  matches_2014.csv  matches_2014_disc.csv  matches_2018.csv  (+26 more)
docs/: conf.py
notebooks/: NOTEBOOKS.md  diurnal_case_study.ipynb  outcomes_boxwhisker.ipynb  pergame_anomaly_summary.ipynb
results/tables/: Finalized_World_cup_Sheet.xlsx  Finalized_World_cup_Sheet_WBGT.csv  Finalized_World_cup_Sheet_WBGT.xlsx  Finalized_World_cup_Sheet_WBGT_columns.md  venue_annual_wbgt.csv
scripts/: 1_extract_points.py  2_precompute_map_inputs.py  3_annual_global_wbgt.py  4_combine_diff.py  5_clim_vs_matches_2014.py  wc_01_extract_men.py  wc_02_extract_women_jobs.py  wc_03_extract_women_pbs.py  wc_04_statsbomb_discipline.py  wc_05_pergame_men.py  wc_06_pergame_women.py  wc_07_finalize_wbgt_columns.py  wc_08_outcomes_vs_climpct.py  wc_09_anomaly_summary.py  wc_10_diurnal_case_study.py  wc_11_build_notebooks.py
src/heathack/: __init__.py  config.py  era5.py  era5_fc.py  thermo.py
tests/: test_wbgt.py
worldcupheat/: __init__.py  era5.py  stats.py  wbgt.py
(+18 files in other folders)
