[project]
name = "worldcupheat"
version = "0.1.0"
description = "Sunlit WBGT at FIFA World Cup stadiums from ERA5 (Liljegren, numba)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "netcdf4",
    "numba",
    "numpy",
    "pandas",
    "timezonefinder",
    "xarray",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "sphinx",
    "sphinx-autobuild",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["worldcupheat"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]